# platform.tools.apkzlib

./: Android.bp  BUILD.bazel  PREUPLOAD.cfg  build.gradle
src/test/resources/testdata/packaging/: withSdkDependencyBlock.apk
